--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.539.0",
     "mailchecker": "^6.0.17",
     "next": "15.4.6",
+    "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
